--- a/.github/workflows/master_oajmweb.yml
+++ b/.github/workflows/master_oajmweb.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: 'node|14-lts'
+          node-version: 'node|18.17.1'
 
       - name: npm install, build, and test
         run: |
